--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,10 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: Clash Display, sans-serif;
+  --font-mono: Clash Display, monospace;
 }
+
 
 :root {
   --background: oklch(1 0 0);
